<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home"
        android:orderInCategory="100"
        android:title="@string/action_home"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_fav"
        android:icon="@drawable/ic_fav"
        android:orderInCategory="100"
        android:title="@string/action_fav"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_back"
        android:icon="@drawable/ic_back"
        android:orderInCategory="101"
        android:title="@string/action_back"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_forward"
        android:icon="@drawable/ic_forward"
        android:orderInCategory="102"
        android:title="@string/action_forward"
        app:showAsAction="always" />


</menu>